# enfolderize

./: CMakeLists.txt  Messages.sh  README.md  commitdialog.cpp  common.cpp  common.h  enfolderizeplugin.cpp  enfolderizeplugin.desktop  enfolderizeplugin.h  enfolderizeplugin_dnd.cpp  enfolderizeplugin_dnd.desktop  enfolderizeplugin_dnd.h  enfolderizepluginsettings.kcfg  enfolderizepluginsettings.kcfgc  flags.h
